--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ build/
 data/projects/*.json
 !data/projects/.gitkeep
 
+# Dashboard public data (generated from data/projects)
+dashboard/public/projects/*.json
+!dashboard/public/projects/.gitkeep
+
 # IDE
 .vscode/
 .idea/
