--- a/config/projects.json
+++ b/config/projects.json
@@ -2,17 +2,22 @@
   {
     "projectId": "mc-map-generator",
     "repo": "Biggsen/mc-map-generator",
-    "path": "spec/reference/mc-map-generator-project-summary-converted.md"
+    "path": "mc-map-generator-project-summary.md"
   },
   {
     "projectId": "musicaid",
     "repo": "Biggsen/musicaidv2",
-    "path": "spec/reference/musicaid-project-summary-converted.md"
+    "path": "musicaid-project-summary.md"
   },
   {
     "projectId": "region-forge",
     "repo": "Biggsen/region-forge",
-    "path": "spec/reference/region-forge-project-summary-converted.md"
+    "path": "region-forge-project-summary.md"
+  },
+  {
+    "projectId": "tunicious",
+    "repo": "Biggsen/tunicious",
+    "path": "tasks/tunicious-project-summary.md"
   }
 ]
 
