--- a/aggregator/package.json
+++ b/aggregator/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@octokit/rest": "^22.0.1",
     "ajv": "^8.17.1",
+    "dotenv": "^17.2.3",
     "mdast-util-to-string": "^4.0.0",
     "remark": "^15.0.1",
     "remark-parse": "^11.0.0",
