--- a/aggregator/package.json
+++ b/aggregator/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "export": "ts-node src/index.ts export"
   },
   "keywords": [
     "project-atlas",
