--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Dependencies
 node_modules/
-package-lock.json
 yarn.lock
 pnpm-lock.yaml
+# Note: package-lock.json files are committed for reproducible builds
 
 # Build outputs
 dist/
